--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 	<head>
 		<title>ゲーム</title>
 		<script src="main.js"></script>
+		<style type="text/css">
+			#maincanvas { margin: 50px; border: 3px solid grey; }
+		</style>
 	</head>
 	<body>
-		<canvas id="maincanvas"></canvas>
+		<canvas id="maincanvas" ></canvas>
 	</body>
 </html>
