--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>ゲーム</title>
 		<script src="main.js"></script>
+		<script src="block.js"></script>
 		<style type="text/css">
 			#maincanvas { margin: 50px; border: 3px solid grey; }
 		</style>
